# django_app

./: .gitignore  README.md  db.sqlite3  pyproject.toml
base/: urls.py  views.py
base/templates/base/: index.html
chat/: urls.py  views.py
chat/static/chat/: chat.js  style.css
chat/templates/chat/: index.html
keywords/: models.py  urls.py  views.py
keywords/migrations/: 0001_initial.py  0002_checkwordseng_word_rus_checkwordsger_word_rus.py
keywords/static/keywords/: admin.css  admin.js  list.js  nav.js
keywords/templates/keywords/: add.html  admin.html  index.html  list.html
myproject/: settings.py  urls.py  views.py
myproject/templates/myproject/: index.html
polls/: apps.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/: login.html
polls/static/polls/: scr.js
polls/templates/polls/: index.html
similar_words/: apps.py  urls.py  views.py
similar_words/templates/similar_words/: index.html
users/: models.py  urls.py  views.py
users/static/users/: edit.js
users/templates/users/: code.html  edit.html  index.html  login.html  registration.html
words/: admin.py  models.py  urls.py  views.py
words/migrations/: 0001_initial.py  0002_rename_base_baseeng_rename_userword_userwordeng.py  0003_basegerm_userwordgerm.py
words/static/words/: buttons.js  mywords.js  recommended.js  style.css  train.js
words/templates/words/: check.html  index.html  mywords.html  train1.html
