[tool.poetry]
name = "django-app2"
version = "0.1.0"
description = ""
authors = ["Trebias <unitsss11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
spacy = "^3.8.2"
pytextrank = "^3.3.0"
nltk = "^3.9.1"
translatepy = "^2.3"
torch = "^2.5.1"
transformers = "^4.46.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
